@@ -9,7 +9,6 @@ import ru.stqa.pft.addressbook.model.GroupData;
 import ru.stqa.pft.addressbook.model.Groups;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static org.hamcrest.CoreMatchers.equalTo;
 import static org.hamcrest.MatcherAssert.assertThat;
@@ -34,7 +33,7 @@ public class AddContactInGroupTest extends TestBase {
         }
     }
 
-    @Test
+    @Test(enabled = false)
     public void testAdd() {
         Contacts before = app.db().contacts();
         ContactData contactBefore = before.iterator().next();
@@ -56,7 +55,7 @@ public class AddContactInGroupTest extends TestBase {
 
     public GroupData groupWithoutContact(Groups group) {
         Groups groups = app.db().groups();
-        List<GroupData> groupsF = groups.stream().filter(g -> g.getContacts().size() == 0).collect(Collectors.toList());
+        List<GroupData> groupsF = groups.stream().filter(g -> g.getContacts().size() == 0).toList();
         if (groupsF.isEmpty()) {
             return null;
         }
